fixed page 6 font-size and spacing

--- a/scss/components/exhibits.scss
+++ b/scss/components/exhibits.scss
@@ -10,6 +10,7 @@
     font-weight: 700;
     line-height: 1.5;
     color: $mint;
+    margin-bottom: 0;
   }
   &__small-text {
     font-size: 12px;
