--- a/scss/pages/page6.scss
+++ b/scss/pages/page6.scss
@@ -1,3 +1,13 @@
+.page-6 {
+  &__header {
+    margin: 30px 0;
+  }
+  &__title {
+    line-height: 1.5;
+    padding-right: 30px;
+  }
+}
+
 .exhibit-b {
   &__main {
     margin-top: 10px;
